%28 - fixed popup visibility

--- a/app/styles/base/common.styl
+++ b/app/styles/base/common.styl
@@ -699,6 +699,7 @@ a
 	background #fff
 
 #livepreview_dialog
+	z-index 1000
 	padding 0px
 	height 205px
 	width 305px
